--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "jquery": "^3.3.1",
     "moment": "^2.24.0",
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
     "mysql2": "^1.6.4",
+    "pg-hstore": "^2.3.2",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-compound-timer": "^1.0.7",
     "react-dom": "^16.7.0",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.42.0",
+    "twilio": "^3.27.1",
+    "twilio-video": "^1.15.0",
+    "sequelize-auto": "^0.4.29"
   }
 }
